# esp32s3_watch

./: CMakeLists.txt  PROJECT_OVERVIEW.md  hello world.txt  partitions-16Mib.csv  sdkconfig  sdkconfig.old
components/: CMakeLists.txt
components/TFTLCD/: cst816t.c  cst816t.h  tftlcd.c  tftlcd.h
components/WATCH_UI/: watch_ui.c  watch_ui.h
components/WEATHER/: weather.c  weather.h
components/WIFI_MGR/: wifi_mgr.c  wifi_mgr.h
components/game/: game_2048.c  game_2048.h
main/: CMakeLists.txt  idf_component.yml  main.c
